# nstu_is_bot

./: .gitignore  README.md  get_user_token.py  kill_bot.sh  make_tasks.py  persist.backup  pyproject.toml  r.py  run_bot.sh  send_daily.py  send_news_daily.py  update_news.py  update_tt_cell.py
misc/: config_example.py  constants.py
sql/create/: news.sql  pair.sql  room.sql  study_group.sql  tt_cell.sql  tt_cell_room.sql  type_study_work.sql
sql/select/: next_first_pair.sql
